2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -244,7 +244,7 @@
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
 
-        <div class="container container-xxl">
+        <div class="container">
             <div id="bus-stops"></div>
         </div>
     </section>
