--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -214,7 +214,7 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html"><i class="fa-solid fa-star"></i> Favourites</a>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i> Pinned</a>
                         </li>
 
                         <li>
@@ -245,6 +245,7 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
 
         <div class="container">
+            <h2 class="text-center" style="padding-top: 1em;">Bus Stops</h2>
             <div id="bus-stops"></div>
         </div>
     </section>
