--- a/buszy.html
+++ b/buszy.html
@@ -207,7 +207,7 @@
                 <div class="card-bz card-ann">
                     <img src="bat/assets/ann.png" alt="ann" class="card-icon" />
                     <p>Announcements</p>
-                    <a href="#" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
             </div>
