--- a/bat/abs.html
+++ b/bat/abs.html
@@ -231,6 +231,12 @@
                             <a href="#" class="active"><i class="fa-solid fa-magnifying-glass"></i>
                                 Search</a>
                         </li>
+
+                        
+                        <li>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
+                                Announcements</a>
+                        </li>
                     </ul>
 
                     <div class="right-arrow active">
