--- a/buszy.html
+++ b/buszy.html
@@ -39,7 +39,7 @@
         /* height: 10vh; */
     }
 
-    @media only screen and (min-width: 489px) and (max-width: 816px) {
+    @media only screen and (min-width: 455px) and (max-width: 816px) {
         .all-apps h2 {
             margin-left: 0em;
         }
@@ -50,6 +50,29 @@
             gap: 20px;
             margin-bottom: 4em;
             padding: 0 0em;
+        }
+
+        .card-bz {
+            width: 100%;
+        }
+
+        .card-bz p {
+            font-size: 20px;
+        }
+    }
+
+    @media only screen and (min-width: 320px) and (max-width: 454px) {
+        .all-apps h2 {
+            margin-left: 0em;
+        }
+
+        .card-container {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 20px;
+            margin-bottom: 4em;
+            padding-left: 3em;
+            padding-right: 3em;
         }
 
         .card-bz {
