--- a/buszy.html
+++ b/buszy.html
@@ -34,7 +34,7 @@
 
 <style>
     #cv-bat {
-        background-image: url("img/bg-img/cover-bat.jpg");
+        background-image: url("img/bg-img/hero-buszy.png");
         height: 40vh;
         /* height: 10vh; */
     }
@@ -307,7 +307,7 @@
                 bookmarksContainer.innerHTML = '';
 
                 if (bookmarks.length === 0) {
-                    bookmarksContainer.innerHTML = '<p>Pin a Bus Stop to get started!</p>';
+                    bookmarksContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-circle-info"></i>Pin a Bus Stop to get started.</p>';
                     return;
                 }
 
